# drum-transcription-training

./: .gitignore  IDEAS.md  MIDI_MAPPING_STANDARD_ANALYSIS.md  MIDI_NOTE_ANALYSIS_REPORT.md  README.md  ROLAND_MIGRATION_PLAN.md  TODO.md  analyze_drum_notes.py  analyze_midi_notes.py  drum_transcription_plan_revised.md  midi_analysis_results.json
drum_transcription/: .gitignore  CLEANUP_IMPLEMENTATION_PLAN.md  DATA_SETUP.md  DRUM_MAPPING.md  HIERARCHICAL_DETECTION_DESIGN.md  IMPLEMENTATION_READY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INFERENCE.md  PER_CLASS_THRESHOLD_GUIDE.md  QUICKSTART.md  README.md  RHYTHM_GAME_OPTIMIZATION.md  ROLAND_MAPPING.md  ROLAND_TRAINING_GUIDE.md  SETUP.md  SETUP_COMPLETE.md  THRESHOLD_ANALYSIS_SETUP.md  TRAINING.md  TRAINING_GUIDE.md  analyze_model_thresholds.sh  auto_train.sh  auto_train_roland.sh  optimize_per_class_thresholds.sh  optuna_study.db  pyproject.toml  quick_test.sh  resume_hierarchical_training.sh  run_preprocess_hierarchical.sh  run_training.py  setup.sh  start_medium_test.sh  test_roland_preprocessing.py  train_with_optuna.py
drum_transcription/configs/: best_optuna_config.yaml  default_config.yaml  drum_config.yaml  full_training_config.yaml  hierarchical_config.yaml  hierarchical_debug.yaml  medium_test_config.yaml  optuna_config.yaml  preprocess_hierarchical.yaml  quick_test_config.yaml  roland_config.yaml  test_config.yaml
drum_transcription/docs/: CODE_REUSE_STRATEGY.md  DRUM_FREQUENCY_REFERENCE.md  EGMD_MIDI_REFERENCE.md  HIERARCHICAL_ARCHITECTURE_DESIGN.md  HIERARCHICAL_MODEL_IMPLEMENTATION_PLAN.md  README.md  (+12 more)
(+36 files in other folders)
